@@ -96,6 +96,7 @@ enum {
 
 #define ARG_COUNTABLE 0x00000001	/* E.g. -vvvv */
 #define ARG_GROUPABLE 0x00000002	/* E.g. --addtag */
+#define ARG_NONINTERACTIVE 0x00000004	/* only for use in noninteractive mode  */
 
 struct arg_values {
 	unsigned count;
